package domain.origen;

public enum Origen {
  DATASET,
  MANUAL,
  CONTRIBUYENTE
}
